// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing historyReducer should do nothing with a junk action 1`] = `
Immutable.Record {
  "name": "No Name",
  "concept": "No Concept",
  "archetype": "",
  "archetypeModified": false,
  "rank": "",
  "rankValue": -1,
  "rankModified": false,
  "entanglement": 0,
  "destiny": 0,
  "skills": Immutable.List [
    Immutable.Record {
      "name": "Awareness",
      "value": 0,
    },
    Immutable.Record {
      "name": "Confidence",
      "value": 0,
    },
    Immutable.Record {
      "name": "Crafting",
      "value": 0,
    },
    Immutable.Record {
      "name": "Finesse",
      "value": 0,
    },
    Immutable.Record {
      "name": "Hardiness",
      "value": 0,
    },
    Immutable.Record {
      "name": "Inspire",
      "value": 0,
    },
    Immutable.Record {
      "name": "Learning",
      "value": 0,
    },
    Immutable.Record {
      "name": "Medicine",
      "value": 0,
    },
    Immutable.Record {
      "name": "Might",
      "value": 0,
    },
    Immutable.Record {
      "name": "Perform",
      "value": 0,
    },
    Immutable.Record {
      "name": "Politics",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ride",
      "value": 0,
    },
    Immutable.Record {
      "name": "Stealth",
      "value": 0,
    },
    Immutable.Record {
      "name": "Survival",
      "value": 0,
    },
    Immutable.Record {
      "name": "Tactics",
      "value": 0,
    },
    Immutable.Record {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
  "skillSpecialities": Immutable.List [],
  "loresheets": Immutable.List [],
  "loresheetOptions": Immutable.List [],
  "discounts": Immutable.List [],
  "bonuses": Immutable.List [],
  "history": Immutable.List [
    Object {
      "type": "INITIAL_STATE",
    },
  ],
  "chi": Immutable.Record {
    "general": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "earth": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "fire": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "metal": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "water": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "wood": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "corrupt": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "enlightened": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
  },
  "externalKungFus": Immutable.List [],
  "internalKungFus": Immutable.List [],
  "virtues": Immutable.List [
    Immutable.Record {
      "name": "Honor",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Benevolence",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Righteousness",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Loyalty",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Force",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Revenge",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Individualism",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Obsession",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ruthlessness",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ferocity",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
  ],
}
`;

exports[`Testing historyReducer should receive an HISTORY_DELETE action 1`] = `
Immutable.Record {
  "name": "Roberts",
  "concept": "Dread pirate Roberts",
  "archetype": "warrior",
  "archetypeModified": true,
  "rank": "4th_rank",
  "rankValue": 2,
  "rankModified": true,
  "entanglement": 0,
  "destiny": 20,
  "skills": Immutable.List [
    Immutable.Record {
      "name": "Awareness",
      "value": 0,
    },
    Immutable.Record {
      "name": "Confidence",
      "value": 0,
    },
    Immutable.Record {
      "name": "Crafting",
      "value": 0,
    },
    Immutable.Record {
      "name": "Finesse",
      "value": 0,
    },
    Immutable.Record {
      "name": "Hardiness",
      "value": 0,
    },
    Immutable.Record {
      "name": "Inspire",
      "value": 0,
    },
    Immutable.Record {
      "name": "Learning",
      "value": 0,
    },
    Immutable.Record {
      "name": "Medicine",
      "value": 0,
    },
    Immutable.Record {
      "name": "Might",
      "value": 0,
    },
    Immutable.Record {
      "name": "Perform",
      "value": 0,
    },
    Immutable.Record {
      "name": "Politics",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ride",
      "value": 0,
    },
    Immutable.Record {
      "name": "Stealth",
      "value": 0,
    },
    Immutable.Record {
      "name": "Survival",
      "value": 0,
    },
    Immutable.Record {
      "name": "Tactics",
      "value": 0,
    },
    Immutable.Record {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
  "skillSpecialities": Immutable.List [],
  "loresheets": Immutable.List [],
  "loresheetOptions": Immutable.List [],
  "discounts": Immutable.List [
    Object {
      "skills": Array [
        "Awareness",
        "Confidence",
        "Crafting",
        "Finesse",
        "Hardiness",
        "Inspire",
        "Learning",
        "Medicine",
        "Might",
        "Perform",
        "Politics",
        "Ride",
        "Stealth",
        "Survival",
        "Tactics",
        "Wu Wei",
      ],
      "type": "DISCOUNT_SKILL",
      "value": 20,
    },
  ],
  "bonuses": Immutable.List [],
  "history": Immutable.List [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Roberts",
      "type": "HEADER_SET_NAME",
    },
    Object {
      "concept": "Dread pirate Roberts",
      "type": "HEADER_SET_CONCEPT",
    },
    Object {
      "archetype": "warrior",
      "type": "HEADER_SET_ARCHETYPE",
    },
    Object {
      "rank": "4th_rank",
      "type": "HEADER_SET_RANK",
    },
  ],
  "chi": Immutable.Record {
    "general": Immutable.Record {
      "value": 10,
      "cultivation": 0,
    },
    "earth": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "fire": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "metal": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "water": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "wood": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "corrupt": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "enlightened": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
  },
  "externalKungFus": Immutable.List [],
  "internalKungFus": Immutable.List [],
  "virtues": Immutable.List [
    Immutable.Record {
      "name": "Honor",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Benevolence",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Righteousness",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Loyalty",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Force",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Revenge",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Individualism",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Obsession",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ruthlessness",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ferocity",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
  ],
}
`;

exports[`Testing historyReducer should receive an HISTORY_DELETE action 2`] = `
Immutable.Record {
  "name": "Roberts",
  "concept": "No Concept",
  "archetype": "",
  "archetypeModified": false,
  "rank": "",
  "rankValue": -1,
  "rankModified": false,
  "entanglement": 0,
  "destiny": 0,
  "skills": Immutable.List [
    Immutable.Record {
      "name": "Awareness",
      "value": 0,
    },
    Immutable.Record {
      "name": "Confidence",
      "value": 0,
    },
    Immutable.Record {
      "name": "Crafting",
      "value": 0,
    },
    Immutable.Record {
      "name": "Finesse",
      "value": 0,
    },
    Immutable.Record {
      "name": "Hardiness",
      "value": 0,
    },
    Immutable.Record {
      "name": "Inspire",
      "value": 0,
    },
    Immutable.Record {
      "name": "Learning",
      "value": 0,
    },
    Immutable.Record {
      "name": "Medicine",
      "value": 0,
    },
    Immutable.Record {
      "name": "Might",
      "value": 0,
    },
    Immutable.Record {
      "name": "Perform",
      "value": 0,
    },
    Immutable.Record {
      "name": "Politics",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ride",
      "value": 0,
    },
    Immutable.Record {
      "name": "Stealth",
      "value": 0,
    },
    Immutable.Record {
      "name": "Survival",
      "value": 0,
    },
    Immutable.Record {
      "name": "Tactics",
      "value": 0,
    },
    Immutable.Record {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
  "skillSpecialities": Immutable.List [],
  "loresheets": Immutable.List [],
  "loresheetOptions": Immutable.List [],
  "discounts": Immutable.List [],
  "bonuses": Immutable.List [],
  "history": Immutable.List [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Roberts",
      "type": "HEADER_SET_NAME",
    },
  ],
  "chi": Immutable.Record {
    "general": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "earth": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "fire": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "metal": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "water": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "wood": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "corrupt": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
    "enlightened": Immutable.Record {
      "value": 0,
      "cultivation": 0,
    },
  },
  "externalKungFus": Immutable.List [],
  "internalKungFus": Immutable.List [],
  "virtues": Immutable.List [
    Immutable.Record {
      "name": "Honor",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Benevolence",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Righteousness",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Loyalty",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Force",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Immutable.Record {
      "name": "Revenge",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Individualism",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Obsession",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ruthlessness",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Immutable.Record {
      "name": "Ferocity",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
  ],
}
`;
